# DownOnSpot

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  rust.yml
assets/: icon.afdesign
src/: converter.rs  downloader.rs  error.rs  main.rs  settings.rs  spotify.rs
src/tag/: id3.rs  mod.rs  ogg.rs
