cargo-features = ["strip"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package]
name = "down_on_spot"
version = "0.0.1"
edition = "2018"
authors = ["exttex", "oSumAtrIX"]
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
log = "0.4.14"
url = "2.2"
id3 = "0.6"
dirs = "3.0"
chrono = "0.4"
lewton = "0.10"
futures = "0.3"
reqwest = "0.11"
colored = "2"
lame = "0.1.3"
aspotify = "0.7"
librespot = "0.2"
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] }
serde_json = "1.0"
async-stream = "0.3"
oggvorbismeta = "0.1"
sanitize-filename = "0.3"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.12", features = ["fs"] }

[package.metadata.winres]
OriginalFilename = "DownOnSpot.exe"
FileDescription = "Download songs from spotify with rust"
ProductName = "DownOnSpot"
ProductVersion = "0.0.1"